# automation-framework

./: .gitignore  README.MD  pyproject.toml
src/automation_framework/config/: driver_manager.py  settings.py
src/automation_framework/utils/: exceptions.py  logger.py  screenshot_manager.py
tests/unit/test_selenium_helper/: test_wait_methods.py
